clusters/common/apps/opencost/app/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: opencost
  namespace: opencost
  annotations:
    item.homer.rajsingh.info/name: "OpenCost"
    item.homer.rajsingh.info/subtitle: "Cost Monitoring"
    item.homer.rajsingh.info/logo: "https://raw.githubusercontent.com/walkxcode/dashboard-icons/main/svg/opencost.svg"
    item.homer.rajsingh.info/keywords: "cost, monitoring, kubernetes"

    service.homer.rajsingh.info/name: "Infrastructure"
    service.homer.rajsingh.info/icon: "fas fa-server"
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: private
      namespace: home
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: ts
      namespace: home
  hostnames:
    - "opencost.${CLUSTER_DOMAIN}"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: opencost
          port: 9090
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
